--- a/PYKit/Source Code/Public/FilePicker/PYAssetPickerController.xib
+++ b/PYKit/Source Code/Public/FilePicker/PYAssetPickerController.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,6 +13,7 @@
             <connections>
                 <outlet property="buttonConfirme" destination="srX-pl-JQ6" id="R6C-4U-WK4"/>
                 <outlet property="collectionView" destination="zPs-05-5Ug" id="I7Z-Fm-uMf"/>
+                <outlet property="labelTag" destination="7fa-VO-qY0" id="9gv-TU-ygN"/>
                 <outlet property="labelTitle" destination="y8S-yb-x3d" id="CVo-Vp-k89"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -21,10 +23,57 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="zPs-05-5Ug">
+                    <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                    <viewLayoutGuide key="safeArea" id="pkI-DF-h30"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1Jw-wx-P4K">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="Pff-YW-dNs"/>
+                        <outlet property="delegate" destination="-1" id="Ee7-JV-i55"/>
+                    </connections>
+                </collectionView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8YZ-BB-S1v">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <subviews>
+                        <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iBk-jd-zCg">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
+                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="NA0-K9-qgz">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </view>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                            <blurEffect style="regular"/>
+                        </visualEffectView>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="iBk-jd-zCg" secondAttribute="trailing" id="93E-TE-pFa"/>
+                        <constraint firstItem="iBk-jd-zCg" firstAttribute="leading" secondItem="8YZ-BB-S1v" secondAttribute="leading" id="DEm-zs-nq7"/>
+                        <constraint firstAttribute="bottom" secondItem="iBk-jd-zCg" secondAttribute="bottom" id="FdN-fT-0oK"/>
+                        <constraint firstItem="iBk-jd-zCg" firstAttribute="top" secondItem="8YZ-BB-S1v" secondAttribute="top" id="p6V-r3-C2G"/>
+                    </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7fa-VO-qY0">
+                    <rect key="frame" x="10" y="88" width="394" height="0.0"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mcc-dH-p1T">
+                    <rect key="frame" x="0.0" y="-12" width="414" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="100" id="ajc-dL-J04"/>
+                    </constraints>
+                    <connections>
+                        <action selector="onclickGotoSetter:" destination="-1" eventType="touchUpInside" id="sYU-WV-aja"/>
+                    </connections>
+                </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Zy-2B-Koz">
                     <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                     <subviews>
@@ -34,7 +83,7 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FMA-Jp-kxF">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FMA-Jp-kxF">
                             <rect key="frame" x="0.0" y="0.0" width="66" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="66" id="ZeK-CJ-Zct"/>
@@ -44,7 +93,7 @@
                                 <action selector="onclickDesmiss:" destination="-1" eventType="touchUpInside" id="WSX-Em-mXR"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="srX-pl-JQ6">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="srX-pl-JQ6">
                             <rect key="frame" x="348" y="0.0" width="66" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="66" id="X7b-Md-WCp"/>
@@ -70,48 +119,44 @@
                         <constraint firstAttribute="bottom" secondItem="srX-pl-JQ6" secondAttribute="bottom" id="xQI-hD-yP5"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="99d-Gv-c8w">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aWE-PO-uwe">
                     <rect key="frame" x="0.0" y="88" width="414" height="0.5"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="0.5" id="HDt-fc-Oca"/>
+                        <constraint firstAttribute="height" constant="0.5" id="X5Q-RQ-use"/>
                     </constraints>
                 </view>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="zPs-05-5Ug">
-                    <rect key="frame" x="0.0" y="88.5" width="414" height="773.5"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <viewLayoutGuide key="safeArea" id="pkI-DF-h30"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1Jw-wx-P4K">
-                        <size key="itemSize" width="50" height="50"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="Pff-YW-dNs"/>
-                        <outlet property="delegate" destination="-1" id="Ee7-JV-i55"/>
-                    </connections>
-                </collectionView>
             </subviews>
-            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="99d-Gv-c8w" firstAttribute="top" secondItem="4Zy-2B-Koz" secondAttribute="bottom" id="73y-wy-AB6"/>
-                <constraint firstItem="99d-Gv-c8w" firstAttribute="top" secondItem="8YZ-BB-S1v" secondAttribute="bottom" id="7UG-bQ-q0m"/>
-                <constraint firstItem="99d-Gv-c8w" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="7XV-q9-oEI"/>
-                <constraint firstItem="zPs-05-5Ug" firstAttribute="top" secondItem="99d-Gv-c8w" secondAttribute="bottom" id="HYL-i4-SKl"/>
+                <constraint firstItem="aWE-PO-uwe" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="1eG-Qu-12H"/>
+                <constraint firstItem="7fa-VO-qY0" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="10" id="Cw4-ks-6QI"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="7fa-VO-qY0" secondAttribute="trailing" constant="10" id="Dj8-bQ-XvB"/>
+                <constraint firstItem="7fa-VO-qY0" firstAttribute="top" secondItem="4Zy-2B-Koz" secondAttribute="bottom" id="G0G-sG-BMv"/>
                 <constraint firstItem="4Zy-2B-Koz" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="Ooy-iz-sv1"/>
                 <constraint firstAttribute="trailing" secondItem="8YZ-BB-S1v" secondAttribute="trailing" id="Tf1-tp-qNf"/>
+                <constraint firstItem="zPs-05-5Ug" firstAttribute="top" secondItem="Mcc-dH-p1T" secondAttribute="bottom" id="UAC-Ff-snT"/>
+                <constraint firstItem="aWE-PO-uwe" firstAttribute="top" secondItem="8YZ-BB-S1v" secondAttribute="bottom" id="VhK-I2-XVK"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="4Zy-2B-Koz" secondAttribute="trailing" id="XGa-Pl-k76"/>
                 <constraint firstItem="zPs-05-5Ug" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="d2q-Ze-Dkq"/>
                 <constraint firstItem="8YZ-BB-S1v" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="eBg-zE-ihQ"/>
-                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="99d-Gv-c8w" secondAttribute="trailing" id="hLh-y8-QzU"/>
+                <constraint firstItem="zPs-05-5Ug" firstAttribute="top" secondItem="7fa-VO-qY0" secondAttribute="bottom" id="hRS-Yn-e0G"/>
+                <constraint firstItem="zPs-05-5Ug" firstAttribute="top" secondItem="8YZ-BB-S1v" secondAttribute="bottom" id="jdp-QY-Dq6"/>
+                <constraint firstItem="Mcc-dH-p1T" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="mkl-G7-oiJ"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Mcc-dH-p1T" secondAttribute="trailing" id="nCx-Ce-Iwo"/>
+                <constraint firstAttribute="trailing" secondItem="aWE-PO-uwe" secondAttribute="trailing" id="nK0-Se-whL"/>
                 <constraint firstItem="4Zy-2B-Koz" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="nNS-Bw-SPR"/>
                 <constraint firstItem="8YZ-BB-S1v" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="pnX-ia-nQC"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="zPs-05-5Ug" secondAttribute="bottom" id="wMD-R6-JkJ"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="zPs-05-5Ug" secondAttribute="trailing" id="yef-0U-0t5"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="131.8840579710145" y="138.61607142857142"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
