--- a/PYKit/Source Code/Private/LongpressMoveItem/PYLongpressMoveItemCell.xib
+++ b/PYKit/Source Code/Private/LongpressMoveItem/PYLongpressMoveItemCell.xib
@@ -43,7 +43,7 @@
                                             <constraint firstAttribute="width" constant="20" id="2Xq-Wz-kcW"/>
                                             <constraint firstAttribute="height" constant="17" id="Bk6-NX-vMY"/>
                                         </constraints>
-                                        <state key="normal" image="PYKit.bundle/images/pykit-press-del.png"/>
+                                        <state key="normal" image="pykit-press-del.png"/>
                                         <connections>
                                             <action selector="onclickDel:" destination="gTV-IL-0wX" eventType="touchUpInside" id="jrF-Ee-LGd"/>
                                         </connections>
@@ -78,6 +78,7 @@
             </constraints>
             <size key="customSize" width="113" height="102"/>
             <connections>
+                <outlet property="buttonDel" destination="laR-Gw-PEK" id="IFq-v5-fNL"/>
                 <outlet property="imageCtxView" destination="VWo-Mz-Log" id="wzh-AR-qfw"/>
                 <outlet property="viewCtx" destination="u1u-2H-VYT" id="wuP-pq-C0r"/>
                 <outlet property="viewDelCtx" destination="fPW-ed-Fag" id="YAy-Ne-Jmt"/>
@@ -86,6 +87,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="PYKit.bundle/images/pykit-press-del.png" width="128" height="128"/>
+        <image name="pykit-press-del.png" width="14" height="14"/>
     </resources>
 </document>
