--- a/PYKit/Source Code/Public/FilePicker/PYAssetPickerController.xib
+++ b/PYKit/Source Code/Public/FilePicker/PYAssetPickerController.xib
@@ -15,6 +15,7 @@
                 <outlet property="collectionView" destination="zPs-05-5Ug" id="I7Z-Fm-uMf"/>
                 <outlet property="labelTag" destination="7fa-VO-qY0" id="9gv-TU-ygN"/>
                 <outlet property="labelTitle" destination="y8S-yb-x3d" id="CVo-Vp-k89"/>
+                <outlet property="lcHeadH" destination="QSO-tf-BiM" id="3lE-10-aDf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -121,7 +122,7 @@
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aWE-PO-uwe">
                     <rect key="frame" x="0.0" y="88" width="414" height="0.5"/>
-                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="0.5" id="X5Q-RQ-use"/>
                     </constraints>
@@ -155,6 +156,9 @@
         </view>
     </objects>
     <resources>
+        <systemColor name="opaqueSeparatorColor">
+            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
